araqne-webconsole/src/main/resources/WEB-INF/script/layoutEngine/layoutEngine.css
.k-d-row{
	border: 0px solid transparent;
	position: relative;
}

.k-d-col{
	/* border-top: 1px solid #dadada; */
	border: 0px solid #dadada;
	float: left;
	/* padding: 20px;
	overflow: hidden; */
	position: relative;
	background: #fff;
}

.k-rs-r {
	background-color: rgba(0,0,0,0);
	width: 10px;
	height: 100%;
	right: -5px;
	top: 0;
	position: absolute;
	cursor: ew-resize;
	z-index: 2013;
}

.k-rs-b {
	background-color: rgba(0,0,0,0);
	width: 100%;
	height: 10px;
	bottom: -5px;
	left: 0;
	position: absolute;
	cursor: ns-resize;
	z-index: 2013;

}

.k-rs-r:hover, .k-rs-b:hover {
	
}

.grabbed {
	/*
	-webkit-transform: scale(0.95);
	transform: scale(0.95);
	*/
	opacity: .8;
}

/*
.movable {
	position: absolute;
	z-index: 8000;
}
*/

.stepright {
	-webkit-transform: translateX(50px) scale(1);
	-webkit-transition-duration: .1s;
	transition-duration: .1s;
}

.stepleft {
	-webkit-transform: translateX(-50px) scale(1);
	-webkit-transition-duration: .1s;
	transition-duration: .1s;
}

.ani {
	-webkit-transition-duration: .2s;
	transition-duration: .2s;
}


.k-d-col {
	background: transparent;
}

.mybox {
	background-color: #fff;
	border: 1px solid #ccc;
	/*
	border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); 
	*/

	top: 2px;
	left: 2px;
	right: 2px;
	bottom: 2px;
	position: absolute;
	border-radius: 0px;

	padding: 0px;
}

.mybox .handler {
	background-image: -webkit-linear-gradient(top,white,#E6E6E6);
	background-image: linear-gradient(to bottom,white,#E6E6E6);
	border-radius: 6px 6px 0px 0px;
	
	font-weight: bold;
	color: gray;
	height: 17px;
	cursor: move;
	cursor: -webkit-grab;
}

.mybox .contentbox {
	
}

.drop-compass {
	border: 1px solid #0088cc;
	/*background-color: #edf7fc;*/
	background-color: white;
	width: 30px;
	height: 30px;
	position: absolute;
	border-radius: 2px;
	/* z-index: 9999; */

	background-image: url("../../lib/bootstrap2/img/glyphicons-halflings.png");
	background-repeat: no-repeat;
	cursor: pointer;
}


.dock-preview {
	position: absolute;
	border: 1px solid rgba(0, 127, 255, .4);
	background-color: rgba(0, 127, 255, .1);
	z-index: 9997;
}

.dock-preview.left {
	width: 50%;
	height: 100%;
}

.dock-preview.right {
	right: 0;
	width: 50%;
	height: 100%;
}

.dock-preview.top {
	top: 0;
	width: 100%;
	height: 50%;
}

.dock-preview.bottom {
	bottom: 0;
	width: 100%;
	height: 50%;
}

.over1 {
	background-image: url("../../lib/bootstrap2/img/glyphicons-halflings-white.png");
	background-color: #0088cc;
}

.droppable {
	cursor: move;
	cursor: -webkit-grabbing;
}

.drp-t {
	top: 0;
	left: 50%;
	margin-left: -16px;
	background-position: -280px -113px;
}

.drp-t.single {
	top: 50%;
	margin-top: -47px;
}

.droppable.max > .drp-t {
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	margin: 0;
	width: auto;
	height: auto;
	border: 1px solid rgba(0, 127, 255, .4);
	background-color: rgba(0, 127, 255, .1);
	background-image: none;
	z-index: 9997;
}

.droppable.max > .drop-compass:not(.drp-t) {
	display: none !important;
}

.droppable.max > .dock-preview {
	display: none !important;
}

.drp-t:after {
	/*content: 't';*/
}

.drp-b {
	bottom: 0;
	left: 50%;
	margin-left: -16px;
	background-position: -304px -112px;
}

.drp-b.single {
	bottom: 50%;
	margin-bottom: -47px;
}

.drp-b:after {
	/*content: 'b';*/
}

.drp-l {
	left: 0;
	top: 50%;
	margin-top: -16px;
	background-position: -424px -65px;
}

.drp-l.single {
	left: 50%;
	margin-left: -47px;
}

.drp-l:after {
	/*content: 'l';*/
}

.drp-r {
	right: 0;
	top: 50%;
	margin-top: -16px;
	background-position: -449px -65px;
}

.drp-r.single {
	right: 50%;
	margin-right: -47px;
}

.drp-r:after {
	/*content: 'r';*/
}

.newbie {
	z-index: 3050;
	position: absolute;
	top: 50%;
	left: 50%;
	width: 40%;
	height: 40%;
	margin-left: -20%;
	margin-top: -11%;
}

.newbie .mybox {
	box-shadow: 5px 5px 20px rgba(0,0,0,.4);
}

.contentbox {
	height: calc(100% - 14px);
}

